@@ -1,3 +1,13 @@
+2008-12-09  Dan Williams  <dcbw@redhat.com>
+
+	* src/connection-editor/main.c
+		- (impl_start): bring connection editor window to front when it's
+			launched again, if it's already started
+
+	* src/connection-editor/nm-connection-list.c
+	  src/connection-editor/nm-connection-list.h
+		- (nm_connection_list_present): no longer static
+
 2008-12-05  Dan Williams  <dcbw@redhat.com>
 
 	* src/gconf-helpers/gconf-helpers.c
